--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "mssql": "^11.0.1"
+  }
 }
