Done with database conn to clinic profile

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "heroicons": "^2.1.5",
+    "mssql": "^11.0.1",
     "node-jose": "^2.2.0",
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
