--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "heroicons": "^2.1.5",
+    "mssql": "^11.0.1",
     "node-jose": "^2.2.0",
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
